force-app/main/default/objects/Job_Role__c/Job_Role__c.object-meta.xml
<CustomObject>
    <description
  >Specifies a job role at an Account that can be associated with a contact.</description>
    <label>Job Role</label>
    <nameField>
        <displayFormat>R{000000}</displayFormat>
        <label>Job Role</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>