force-app/main/default/objects/Job_Role__c/fields/Account_Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Account_Budget_Range__c</fullName>
    <description
  >Navigator Budget Range based on the job role account</description>
    <formula>Account__r.Navigator_Budget_Range__c</formula>
    <inlineHelpText
  >Navigator Budget Range based on the job role account</inlineHelpText>
    <label>Account Budget Range</label>
    <type>Text</type>
</CustomField>