force-app/main/default/objects/Job_Role__c/fields/Account_Jurisdiction_Function__c.field-meta.xml
<CustomField>
    <fullName>Account_Jurisdiction_Function__c</fullName>
    <formula>TEXT(Account__r.Jurisdiction_Function__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Jurisdiction Function</label>
    <type>Text</type>
</CustomField>