force-app/main/default/objects/Job_Role__c/fields/Account_Jurisdiction_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Jurisdiction_Level__c</fullName>
    <formula>TEXT(Account__r.Jurisdiction_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Jurisdiction Level</label>
    <type>Text</type>
</CustomField>