force-app/main/default/objects/Job_Role__c/fields/Agency_Function_Detail__c.field-meta.xml
<CustomField>
    <fullName>Agency_Function_Detail__c</fullName>
    <description>Function Detail of Department</description>
    <inlineHelpText>Function Detail of Agency/Department</inlineHelpText>
    <label>Agency Function Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agency_Function_Detail</valueSetName>
    </valueSet>
</CustomField>