force-app/main/default/objects/Job_Role__c/fields/Bad_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Bad_Mailing_Address__c</fullName>
    <formula>Contact__r.Bad_Mailing_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bad Mailing Address</label>
    <type>Checkbox</type>
</CustomField>