force-app/main/default/objects/Job_Role__c/fields/Branch_of_Govt_Detail__c.field-meta.xml
<CustomField>
    <fullName>Branch_of_Govt_Detail__c</fullName>
    <description
  >Detailed demographic information for the branch of government</description>
    <inlineHelpText
  >Detailed demographic information for the branch of government</inlineHelpText>
    <label>Branch of Govt Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch_of_Govt_Detail</valueSetName>
    </valueSet>
</CustomField>