force-app/main/default/objects/Job_Role__c/fields/Contact_Bad_Mailing__c.field-meta.xml
<CustomField>
    <fullName>Contact_Bad_Mailing__c</fullName>
    <formula>Contact__r.Bad_Mailing_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact: Bad Mailing</label>
    <type>Checkbox</type>
</CustomField>