force-app/main/default/objects/Job_Role__c/fields/Contact_Department__c.field-meta.xml
<CustomField>
    <fullName>Contact_Department__c</fullName>
    <formula>Contact__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>