force-app/main/default/objects/Job_Role__c/fields/Contact_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Opt_Out__c</fullName>
    <formula>Contact__r.HasOptedOutOfEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact: Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>