force-app/main/default/objects/Job_Role__c/fields/Contact_Job_Role_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Job_Role_Verification_Date__c</fullName>
    <formula>Contact__r.Job_Role_Verification_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact: Job Role Verification Date</label>
    <type>Date</type>
</CustomField>