force-app/main/default/objects/Job_Role__c/fields/Contact_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Middle_Name__c</fullName>
    <formula>Contact__r.MiddleName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact: Middle Name</label>
    <type>Text</type>
</CustomField>