force-app/main/default/objects/Job_Role__c/fields/Contact_Needs_Verification__c.field-meta.xml
<CustomField>
    <fullName>Contact_Needs_Verification__c</fullName>
    <formula>Contact__r.Needs_Verification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact: Needs Verification</label>
    <type>Date</type>
</CustomField>