force-app/main/default/objects/Job_Role__c/fields/Contact_Needs_Verification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contact_Needs_Verification_Reason__c</fullName>
    <formula>Contact__r.Needs_Verification_Reason__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact: Needs Verification Reason</label>
    <type>Text</type>
</CustomField>