force-app/main/default/objects/Job_Role__c/fields/Contact_Organization__c.field-meta.xml
<CustomField>
    <fullName>Contact_Organization__c</fullName>
    <formula>Contact__r.Company_Name_Holder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization</label>
    <type>Text</type>
</CustomField>