force-app/main/default/objects/Job_Role__c/fields/Contact_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Contact_Salutation__c</fullName>
    <formula>TEXT(Contact__r.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact: Salutation</label>
    <type>Text</type>
</CustomField>