force-app/main/default/objects/Job_Role__c/fields/Contact_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Contact_Suffix__c</fullName>
    <formula>Contact__r.Suffix</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact: Suffix</label>
    <type>Text</type>
</CustomField>