force-app/main/default/objects/Job_Role__c/fields/Demo_Agency_Function__c.field-meta.xml
<CustomField>
    <fullName>Demo_Agency_Function__c</fullName>
    <label>Demo Agency Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agency_Function</valueSetName>
    </valueSet>
</CustomField>