force-app/main/default/objects/Job_Role__c/fields/Demo_Job_Role_N__c.field-meta.xml
<CustomField>
    <fullName>Demo_Job_Role_N__c</fullName>
    <label>Demo Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Job_Role</valueSetName>
    </valueSet>
</CustomField>