force-app/main/default/objects/Job_Role__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Job Role Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>