force-app/main/default/objects/Job_Role__c/fields/Department_Function__c.field-meta.xml
<CustomField>
    <fullName>Department_Function__c</fullName>
    <label>Department Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1a - State - Governor</fullName>
            </value>
            <value>
                <fullName>1b - State - Lieutenant Governor</fullName>
            </value>
            <value>
                <fullName>1c - State - Legislative</fullName>
            </value>
            <value>
                <fullName>1d - State - Secretary of State</fullName>
            </value>
            <value>
                <fullName>1e - State - Attorney General</fullName>
            </value>
            <value>
                <fullName>2a - County - County Administrator</fullName>
            </value>
            <value>
                <fullName
        >2b - County - Board of Commissioners/Supervisors</fullName>
                <label>2b - County - Board of Commissioners/Supervisors</label>
            </value>
            <value>
                <fullName>3a - City - Mayor</fullName>
            </value>
            <value>
                <fullName>3b - City - City Manager</fullName>
            </value>
            <value>
                <fullName>3c - City - City Council</fullName>
            </value>
            <value>
                <fullName>4a - IT - Information Technology</fullName>
            </value>
            <value>
                <fullName>4b - IT - Information Security</fullName>
            </value>
            <value>
                <fullName>4c - IT - Networks/Telecommunications</fullName>
            </value>
            <value>
                <fullName>5a - Finance - Finance</fullName>
            </value>
            <value>
                <fullName>5b - Finance - Treasury</fullName>
            </value>
            <value>
                <fullName>5c - Finance - Controller/Comptroller</fullName>
            </value>
            <value>
                <fullName>5d - Finance - Budget</fullName>
            </value>
            <value>
                <fullName>5e - Finance - Purchasing/Procurement</fullName>
            </value>
            <value>
                <fullName>5f - Finance - Audit</fullName>
            </value>
            <value>
                <fullName>5g - Finance - Revenue</fullName>
            </value>
            <value>
                <fullName>5h - Finance - Insurance</fullName>
            </value>
            <value>
                <fullName>5i - Finance - Retirement/Pension</fullName>
            </value>
            <value>
                <fullName>6a - Edu - Education</fullName>
            </value>
            <value>
                <fullName>6b - Edu - Curriculum</fullName>
            </value>
            <value>
                <fullName>6c - Edu - Instructional Technology</fullName>
            </value>
            <value>
                <fullName>6d - Edu - Research</fullName>
            </value>
            <value>
                <fullName>6e - Edu - Library</fullName>
            </value>
            <value>
                <fullName>7a - Pub Safety - Sheriff</fullName>
            </value>
            <value>
                <fullName>7b - Pub Safety - Fire</fullName>
            </value>
            <value>
                <fullName>7c - Pub Safety - Police</fullName>
            </value>
            <value>
                <fullName
        >7d - Pub Safety - Emergency Mgmt/Homeland Security</fullName>
                <label
        >7d - Pub Safety - Emergency Mgmt/Homeland Security</label>
            </value>
            <value>
                <fullName>7e - Pub Safety - Other Public Safety</fullName>
            </value>
            <value>
                <fullName>8a - Admin - Administration</fullName>
            </value>
            <value>
                <fullName>8b - Admin - General Services/Operations</fullName>
            </value>
            <value>
                <fullName>8c - Admin - Facilities/Buildings</fullName>
            </value>
            <value>
                <fullName>8d - Admin - Elections</fullName>
            </value>
            <value>
                <fullName>8e - Admin - Communications</fullName>
            </value>
            <value>
                <fullName>8f - Admin - Board/Commission</fullName>
            </value>
            <value>
                <fullName>8g - Admin - Other</fullName>
            </value>
            <value>
                <fullName>9a - Workforce - Labor/Workforce</fullName>
            </value>
            <value>
                <fullName>9b - Workforce - Human Resources</fullName>
            </value>
            <value>
                <fullName>9c - Workforce - Benefits</fullName>
            </value>
            <value>
                <fullName>10a - Nat Res - Agriculture/Food</fullName>
            </value>
            <value>
                <fullName>10b - Nat Res - Environment</fullName>
            </value>
            <value>
                <fullName>10c - Nat Res - Parks &amp; Recreation</fullName>
            </value>
            <value>
                <fullName>11a - Pub Works - Public Works</fullName>
            </value>
            <value>
                <fullName>11b - Pub Works - Planning</fullName>
            </value>
            <value>
                <fullName>11c - Pub Works - Transportation</fullName>
            </value>
            <value>
                <fullName>11d - Pub Works - Utilities</fullName>
            </value>
            <value>
                <fullName>11e - Pub Works - Energy</fullName>
            </value>
            <value>
                <fullName>11f - Pub Works - Code Enforcement/Zoning</fullName>
            </value>
            <value>
                <fullName>11g - Pub Works - Engineering</fullName>
            </value>
            <value>
                <fullName>12a - HHS - Health &amp; Human Services</fullName>
            </value>
            <value>
                <fullName>12b - HHS - Children &amp; Family Services</fullName>
            </value>
            <value>
                <fullName>12c - HHS - Housing</fullName>
            </value>
            <value>
                <fullName>12d - HHS - Veteran Affairs</fullName>
            </value>
            <value>
                <fullName>13a - Law - Judicial/Courts</fullName>
            </value>
            <value>
                <fullName>13b - Law - Legal</fullName>
            </value>
            <value>
                <fullName>13c - Law - Corrections</fullName>
            </value>
            <value>
                <fullName>13d - Law - Policy</fullName>
            </value>
            <value>
                <fullName>13e - Law - Licensing/Regulation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>