force-app/main/default/objects/Job_Role__c/fields/Department_URL__c.field-meta.xml
<CustomField>
    <fullName>Department_URL__c</fullName>
    <label>Department URL</label>
    <type>Url</type>
</CustomField>