force-app/main/default/objects/Job_Role__c/fields/Do_Not_Send_Promotional_Email__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Promotional_Email__c</fullName>
    <formula>Contact__r.Do_Not_Send_Promotional_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Send Promotional Emaill</label>
    <type>Checkbox</type>
</CustomField>