force-app/main/default/objects/Job_Role__c/fields/Former_Contact__c.field-meta.xml
<CustomField>
    <fullName>Former_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >This is the previous person that used to be in this Job Role.</description>
    <inlineHelpText
  >This is the previous person that used to be in this Job Role.</inlineHelpText>
    <label>Former Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Former Job Roles</relationshipLabel>
    <relationshipName>Job_Roles1</relationshipName>
    <type>Lookup</type>
</CustomField>