force-app/main/default/objects/Job_Role__c/fields/Former_Contact_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Former_Contact_Last_Updated__c</fullName>
    <label>Former Contact Last Updated</label>
    <type>Date</type>
</CustomField>