force-app/main/default/objects/Job_Role__c/fields/Generic_Email__c.field-meta.xml
<CustomField>
    <fullName>Generic_Email__c</fullName>
    <label>Generic Email</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>