force-app/main/default/objects/Job_Role__c/fields/Google_Search_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Search_Link__c</fullName>
    <description>This is a custom Google search link</description>
    <formula
  >HYPERLINK(&quot;http:www.google.com/search?en&amp;q=&quot;&amp;Job_Role_Title__c&amp;&quot; &quot;&amp;Account__r.Name,&quot;To The Finding Machine!&quot;)</formula>
    <inlineHelpText>This is a custom Google search link</inlineHelpText>
    <label>Google Search Link</label>
    <type>Text</type>
</CustomField>