force-app/main/default/objects/Job_Role__c/fields/GRID_Account_Check__c.field-meta.xml
<CustomField>
    <fullName>GRID_Account_Check__c</fullName>
    <description
  >Formula evaluates to TRUE if the contact is in an account different from the assigned GRID account.</description>
    <formula
  >IF(Account__r.Id &lt;&gt; Contact__r.AccountId, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Formula evaluates to TRUE if the contact is in an account different from the assigned GRID account.</inlineHelpText>
    <label>GRID Account Check</label>
    <type>Checkbox</type>
</CustomField>