force-app/main/default/objects/Job_Role__c/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <formula>TEXT(Contact__r.Inactive_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Reason</label>
    <type>Text</type>
</CustomField>