force-app/main/default/objects/Job_Role__c/fields/Job_Function_Detail__c.field-meta.xml
<CustomField>
    <fullName>Job_Function_Detail__c</fullName>
    <description>Function of Role</description>
    <inlineHelpText>The detailed function of the job</inlineHelpText>
    <label>Secondary Job Function Detail</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Job_Function_Detail</valueSetName>
    </valueSet>
</CustomField>