force-app/main/default/objects/Job_Role__c/fields/Job_Role_Detail__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Detail__c</fullName>
    <description>Hierarchy Level of Role</description>
    <inlineHelpText>Hierarchy Level of Role</inlineHelpText>
    <label>Job Role Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Job_Role_Level_Detail</valueSetName>
    </valueSet>
</CustomField>