force-app/main/default/objects/Job_Role__c/fields/Job_Role_Email__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Email__c</fullName>
    <label>Job Role Email</label>
    <type>Email</type>
</CustomField>