force-app/main/default/objects/Job_Role__c/fields/Job_Role_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Level__c</fullName>
    <label>Job Role Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jurisdiction Head</fullName>
            </value>
            <value>
                <fullName>Jurisdiction Deputy Head</fullName>
            </value>
            <value>
                <fullName>Jurisdiction Function Head</fullName>
            </value>
            <value>
                <fullName>Jurisdiction Function Deputy Head</fullName>
            </value>
            <value>
                <fullName>Department Head</fullName>
            </value>
            <value>
                <fullName>Department Deputy Head</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Staff (Non-Management)</fullName>
            </value>
            <value>
                <fullName>Public School District Head</fullName>
            </value>
            <value>
                <fullName>Public School District Deputy Head</fullName>
            </value>
            <value>
                <fullName>University System Head</fullName>
            </value>
            <value>
                <fullName>University System Deputy Head</fullName>
            </value>
            <value>
                <fullName>University/College (4-Year) Head</fullName>
            </value>
            <value>
                <fullName>University/College (4-Year) Deputy Head</fullName>
            </value>
            <value>
                <fullName>Community College District Head</fullName>
            </value>
            <value>
                <fullName>Community College District Deputy Head</fullName>
            </value>
            <value>
                <fullName>Community College (2-Year) Head</fullName>
            </value>
            <value>
                <fullName>Community College (2-Year) Deputy Head</fullName>
            </value>
            <value>
                <fullName>State Legislator</fullName>
            </value>
            <value>
                <fullName>Deputy</fullName>
                <isActive>false</isActive>
                <label>Deputy</label>
            </value>
            <value>
                <fullName>Head</fullName>
                <isActive>false</isActive>
                <label>Head</label>
            </value>
            <value>
                <fullName>State Representative</fullName>
                <isActive>false</isActive>
                <label>State Representative</label>
            </value>
            <value>
                <fullName>State Senator</fullName>
                <isActive>false</isActive>
                <label>State Senator</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>