force-app/main/default/objects/Job_Role__c/fields/Job_Role_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Mailing_City__c</fullName>
    <label>Job Role Mailing City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>